// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkCheckbox should apply aria-hidden to all label text except links 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox"
    for="checkbox"
  >
    <input
      aria-invalid="false"
      aria-label="This text contains a link."
      class="bpk-checkbox__input"
      data-indeterminate="false"
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <label
      class="bpk-checkbox__label"
    >
      <span
        aria-hidden="true"
      >
        This text contains a 
      </span>
      <a
        class="bpk-link"
        href="#"
      >
        link
      </a>
      <span
        aria-hidden="true"
      >
        .
      </span>
    </label>
  </label>
</DocumentFragment>
`;

exports[`BpkCheckbox should render as disabled when required and disabled 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox bpk-checkbox--disabled"
  >
    <input
      aria-invalid="false"
      aria-label="Prefer directs"
      class="bpk-checkbox__input"
      data-indeterminate="false"
      disabled=""
      name="checkbox"
      type="checkbox"
    />
    <label
      class="bpk-checkbox__label"
    >
      <span
        aria-hidden="true"
      >
        Prefer directs
      </span>
    </label>
  </label>
</DocumentFragment>
`;

exports[`BpkCheckbox should render correctly 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox"
  >
    <input
      aria-invalid="false"
      aria-label="Prefer directs"
      class="bpk-checkbox__input"
      data-indeterminate="false"
      name="checkbox"
      type="checkbox"
    />
    <label
      class="bpk-checkbox__label"
    >
      <span
        aria-hidden="true"
      >
        Prefer directs
      </span>
    </label>
  </label>
</DocumentFragment>
`;

exports[`BpkCheckbox should render correctly with a small label 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox"
  >
    <input
      aria-invalid="false"
      aria-label="Prefer directs"
      class="bpk-checkbox__input"
      data-indeterminate="false"
      name="checkbox"
      type="checkbox"
    />
    <label
      class="bpk-checkbox__label bpk-checkbox__label--small"
    >
      <span
        aria-hidden="true"
      >
        Prefer directs
      </span>
    </label>
  </label>
</DocumentFragment>
`;

exports[`BpkCheckbox should render correctly with checked attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox"
  >
    <input
      aria-invalid="false"
      aria-label="Prefer directs"
      checked=""
      class="bpk-checkbox__input"
      data-indeterminate="false"
      name="checkbox"
      type="checkbox"
    />
    <label
      class="bpk-checkbox__label"
    >
      <span
        aria-hidden="true"
      >
        Prefer directs
      </span>
    </label>
  </label>
</DocumentFragment>
`;

exports[`BpkCheckbox should render correctly with disabled attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox bpk-checkbox--disabled"
  >
    <input
      aria-invalid="false"
      aria-label="Prefer directs"
      class="bpk-checkbox__input"
      data-indeterminate="false"
      disabled=""
      name="checkbox"
      type="checkbox"
    />
    <label
      class="bpk-checkbox__label"
    >
      <span
        aria-hidden="true"
      >
        Prefer directs
      </span>
    </label>
  </label>
</DocumentFragment>
`;

exports[`BpkCheckbox should render correctly with id attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox"
    for="checkbox"
  >
    <input
      aria-invalid="false"
      aria-label="Prefer directs"
      class="bpk-checkbox__input"
      data-indeterminate="false"
      id="checkbox"
      name="checkbox"
      type="checkbox"
    />
    <label
      class="bpk-checkbox__label"
    >
      <span
        aria-hidden="true"
      >
        Prefer directs
      </span>
    </label>
  </label>
</DocumentFragment>
`;

exports[`BpkCheckbox should render correctly with indeterminate attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox"
  >
    <input
      aria-invalid="false"
      aria-label="Prefer directs"
      class="bpk-checkbox__input bpk-checkbox__input-indeterminate"
      data-indeterminate="true"
      name="checkbox"
      type="checkbox"
    />
    <label
      class="bpk-checkbox__label"
    >
      <span
        aria-hidden="true"
      >
        Prefer directs
      </span>
    </label>
  </label>
</DocumentFragment>
`;

exports[`BpkCheckbox should render correctly with indeterminate state when both checked and indeterminate attributes 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox"
  >
    <input
      aria-invalid="false"
      aria-label="Prefer directs"
      checked=""
      class="bpk-checkbox__input bpk-checkbox__input-indeterminate"
      data-indeterminate="true"
      name="checkbox"
      type="checkbox"
    />
    <label
      class="bpk-checkbox__label"
    >
      <span
        aria-hidden="true"
      >
        Prefer directs
      </span>
    </label>
  </label>
</DocumentFragment>
`;

exports[`BpkCheckbox should render correctly with required attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox"
  >
    <input
      aria-invalid="false"
      aria-label="Prefer directs"
      class="bpk-checkbox__input"
      data-indeterminate="false"
      name="checkbox"
      type="checkbox"
    />
    <label
      class="bpk-checkbox__label"
    >
      <span
        aria-hidden="true"
      >
        Prefer directs
      </span>
      <span
        class="bpk-checkbox__asterisk"
      >
        *
      </span>
    </label>
  </label>
</DocumentFragment>
`;

exports[`BpkCheckbox should render correctly with valid=false attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox bpk-checkbox--invalid"
  >
    <input
      aria-invalid="true"
      aria-label="Prefer directs"
      class="bpk-checkbox__input"
      data-indeterminate="false"
      name="checkbox"
      type="checkbox"
    />
    <label
      class="bpk-checkbox__label"
    >
      <span
        aria-hidden="true"
      >
        Prefer directs
      </span>
    </label>
  </label>
</DocumentFragment>
`;

exports[`BpkCheckbox should render correctly with value attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox"
  >
    <input
      aria-invalid="false"
      aria-label="Prefer directs"
      class="bpk-checkbox__input"
      data-indeterminate="false"
      name="checkbox"
      type="checkbox"
      value="my-value"
    />
    <label
      class="bpk-checkbox__label"
    >
      <span
        aria-hidden="true"
      >
        Prefer directs
      </span>
    </label>
  </label>
</DocumentFragment>
`;

exports[`BpkCheckbox should render correctly with white attribute 1`] = `
<DocumentFragment>
  <label
    class="bpk-checkbox bpk-checkbox--white"
  >
    <input
      aria-invalid="false"
      aria-label="Prefer directs"
      class="bpk-checkbox__input bpk-checkbox__input-white"
      data-indeterminate="false"
      name="checkbox"
      type="checkbox"
    />
    <label
      class="bpk-checkbox__label"
    >
      <span
        aria-hidden="true"
      >
        Prefer directs
      </span>
    </label>
  </label>
</DocumentFragment>
`;
